rust_writer_proc/tests/ui/parse_attrs_fails_if_already_expanded_applied_to_unit_struct.stderr
error: Cannot use #[already_expanded] attribute in an unit struct
 --> tests/ui/parse_attrs_fails_if_already_expanded_applied_to_unit_struct.rs:7:8
  |
7 | struct SomeStruct;
  |        ^^^^^^^^^^
